# dbgpass

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_tests.sh
docs/: api-reference.md  architecture.md  build-guide.md  dbgpass.1  examples.md  extending-guide.md  passgen.1
include/cli/: Command.h  CommandInvoker.h  PasswordGeneratorCLI.h
include/cli/commands/: ActionCommands.h  BatchCommand.h  ClearCommand.h  CliCommands.h  Command.h  CommandBuilder.h  CommandContext.h  CommandFactory.h  CommandInvoker.h  ConfigCommand.h  ConfigCommands.h  GenerateCommand.h  HelpCommand.h  SetLengthCommand.h  SetSymbolsCommand.h  ToggleDigitsCommand.h  ToggleLowercaseCommand.h  TogglePronounceableCommand.h  ToggleSymbolsCommand.h  ToggleUppercaseCommand.h  ValidateCommand.h  VersionCommand.h
include/providers/: DigitProvider.h  LowercaseProvider.h  SymbolProvider.h  UppercaseProvider.h
include/strategies/: PatternPasswordStrategy.h  PronounceablePasswordStrategy.h  StandardPasswordStrategy.h
include/utils/: SecureRandomGenerator.h
include/validators/: CharacterTypeValidator.h  EntropyValidator.h  MaxLengthValidator.h  MinLengthValidator.h
scripts/: build-macos.sh  build.sh  install.sh
src/: main.cpp
src/cli/: CommandInvoker.cpp  PasswordGeneratorCLI.cpp
src/cli/commands/: ActionCommands.cpp  BatchCommand.cpp  ClearCommand.cpp  CommandBuilder.cpp  CommandContext.cpp  CommandFactory.cpp  CommandInvoker.cpp  ConfigCommand.cpp  ConfigCommands.cpp  ConfigShowCommand.cpp  GenerateCommand.cpp  HelpCommand.cpp  SetLengthCommand.cpp  (+8 more)
src/providers/: DigitProvider.cpp  LowercaseProvider.cpp  SymbolProvider.cpp  UppercaseProvider.cpp
src/strategies/: PatternPasswordStrategy.cpp  PronounceablePasswordStrategy.cpp  StandardPasswordStrategy.cpp
src/utils/: SecureRandomGenerator.cpp
src/validators/: CharacterTypeValidator.cpp  EntropyValidator.cpp  MaxLengthValidator.cpp  MinLengthValidator.cpp
tests/: CMakeLists.txt
tests/integration/: PasswordGeneratorIntegrationTest.cpp
tests/mocks/: MockRandomGenerator.h
tests/unit/strategies/: StandardPasswordStrategyTest.cpp
tests/unit/validators/: ValidatorsTest.cpp
